--- a/page_app/templates/page_app/partial/contato.html
+++ b/page_app/templates/page_app/partial/contato.html
@@ -11,14 +11,14 @@
         abaixo:</p>
 
     <div class="contact-info">
-        <a href="mailto:contato@contato.com.br" class="d-block">
-            <i class="far fa-envelope mr-2"></i>contato@contato.com.br
+        <a href="mailto:contato@jjinvestimentos.com.br" class="d-block">
+            <i class="far fa-envelope mr-2"></i>contato@jjinvestimentos.com.br
         </a>
-        <a href="http://wa.me/5541984332211?text=Ol%C3%A1%2C%20tenho%20interesse%20em%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20investimentos.%20Estou%20ansioso%20para%20aprender." target="_blank" class="d-block">
-            <i class="fab fa-whatsapp mr-2"></i>(41) 98433-2211
+        <a href="http://wa.me/12526804187?text=Ol%C3%A1%2C%20tenho%20interesse%20em%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20investimentos.%20Estou%20ansioso%20para%20aprender." target="_blank" class="d-block">
+            <i class="fab fa-whatsapp mr-2"></i>+1 (25) 2680-4187
         </a>
-        <a href="tel:+554132322323" class="d-block">
-            <i class="fas fa-phone mr-2"></i>(41) 3232-2323
+        <a href="tel:+554132232112" class="d-block">
+            <i class="fas fa-phone mr-2"></i>(41) 3223-2112
         </a>
     </div>
 </div>
