--- a/page_app/templates/page_app/partial/home.html
+++ b/page_app/templates/page_app/partial/home.html
@@ -19,7 +19,7 @@
                 sustentável.</p>
         </div>
         <div class="col-md-5">
-            <img src="page_app/img/imagem_2.jpg" alt="Imagem da empresa"
+            <img src="static\page_app\img\imagem_2.jpg" alt="Imagem da empresa"
                 class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
                 height="500" role="img" focusable="false">
         </div>
@@ -36,9 +36,9 @@
                 investimento conosco!</p>
         </div>
         <div class="col-md-5 order-md-1">
-            <img src="page_app/img/imagem_3.jpg" alt="Imagem da empresa"
+            <img src="static\page_app\img\imagem_3.jpg" alt="Imagem da empresa"
                 class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                height="500" role="img" focusable="false">
+                height="500" role="img" focusable="false"/>
         </div>
     </div>
 
@@ -52,7 +52,7 @@
                 financeiro. Juntos, construímos um futuro sólido e próspero. Invista no seu crescimento conosco!</p>
         </div>
         <div class="col-md-5">
-            <img src="page_app/img/imagem_1.jpg" alt="Imagem da empresa"
+            <img src="static\page_app\img\imagem_1.jpg" alt="Imagem da empresa"
                 class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
                 height="500" role="img" focusable="false">
         </div>
