--- a/page_app/templates/page_app/partial/welcome.html
+++ b/page_app/templates/page_app/partial/welcome.html
@@ -1,8 +1,6 @@
 {% load static %}
 <div class="mt-4 p-5 bg-dark text-white text-center">
-    <!-- Adicionando margem superior e inferior -->
-    <img src="img/JJ_investimento.png" alt="imagem grande logo" class="rounded-circle mb-3"
-        width="150">
+    <a><img src="{% static 'page_app\img\JJ_ivestimento.png' %}" alt="imagem grande logo" class="rounded-circle mb-3" width="150"><a/>
 
     <!-- Título e descrição -->
     <h1>JJ Investimentos</h1>
