--- a/page_app/templates/page_app/partial/footer.html
+++ b/page_app/templates/page_app/partial/footer.html
@@ -2,9 +2,9 @@
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
-            <li class="nav-item"><a href="#FIXME" class="nav-link px-2 text-body-secondary">Nossos Serviços</a></li>
-            <li class="nav-item"><a href="#FIXME" class="nav-link px-2 text-body-secondary">Contato</a></li>
-            <li class="nav-item"><a href="#FIXME" class="nav-link px-2 text-body-secondary">Voltar ao topo</a></li>
+            <li class="nav-item"><a href="/services" class="nav-link px-2 text-body-secondary">Nossos Serviços</a></li>
+            <li class="nav-item"><a href="/contato" class="nav-link px-2 text-body-secondary">Contato</a></li>
+            <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Voltar ao topo</a></li>
         </ul>
         <p class="text-center text-body-secondary">© 2023 Softway, Inc. All rights reserved.</p>
     </footer>
