--- a/page_app/templates/page_app/partial/header.html
+++ b/page_app/templates/page_app/partial/header.html
@@ -1,11 +1,10 @@
 {% load static %}
 
 <header>
-    <!-- Fixed navbar -->
+    
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/"><img src="img/logo.png" alt="Logo"
-                    class="rounded-circle" width="30"></a>
+            <a class="navbar-brand" href="/"><img src="{% static 'page_app\img\logo.png' %}" alt="Logo" class="rounded-circle" width="30"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -19,10 +18,10 @@
                         <a class="nav-link" href="/contato">Contato</a>
                     </li>
                 </ul>
-                <!-- Mover para a margem esquerda -->
+                
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Voltar ao topo</a>
+                        <a class="nav-link" href="/">Voltar ao topo</a>
                     </li>
                 </ul>
             </div>
